--- a/app/src/main/res/layout/activity_food_cart_single_item_page.xml
+++ b/app/src/main/res/layout/activity_food_cart_single_item_page.xml
@@ -13,9 +13,15 @@
         android:text="Item name" />
     <TextView
         android:id="@+id/tv_order_item_price"
-        android:layout_width="150dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Price"/>
+    <TextView
+        android:id="@+id/order_total_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="35dp"
+        android:text="Total"/>
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
