--- a/app/src/main/res/layout/activity_profile_dob_edit.xml
+++ b/app/src/main/res/layout/activity_profile_dob_edit.xml
@@ -13,7 +13,8 @@
     android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="horizontal">
-    <android.support.design.widget.TextInputLayout
+
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/userIDTextInputLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="100dp"
@@ -23,15 +24,15 @@
         android:layout_marginBottom="40dp"
         android:layout_height="wrap_content">
 
-        <android.support.design.widget.TextInputEditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/userIDTextInputEditText"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:inputType="number"
             android:hint="Day" />
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/userIDTextInputLayout2"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="100dp"
@@ -41,16 +42,16 @@
         android:layout_marginBottom="40dp"
         android:layout_height="wrap_content">
 
-        <android.support.design.widget.TextInputEditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/userIDTextInputEditText2"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:inputType="number"
             android:hint="Month" />
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/userIDTextInputLayout3"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="100dp"
@@ -60,13 +61,13 @@
         android:layout_marginBottom="40dp"
         android:layout_height="wrap_content">
 
-        <android.support.design.widget.TextInputEditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/userIDTextInputEditText3"
             android:layout_width="100dp"
             android:inputType="number"
             android:layout_height="wrap_content"
             android:hint="Year" />
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
