--- a/app/src/main/res/layout/group_fragment.xml
+++ b/app/src/main/res/layout/group_fragment.xml
@@ -183,7 +183,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <android.support.v7.widget.RecyclerView
+
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_list_of_friend_group"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -191,23 +192,19 @@
                 >
 
 
-            </android.support.v7.widget.RecyclerView>
+            </androidx.recyclerview.widget.RecyclerView>
 
 
 
         </RelativeLayout>
 
-
-
-
-
     </LinearLayout>
-    <android.support.design.widget.FloatingActionButton
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabGroupAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-     android:layout_margin="15dp"
-
+        android:layout_margin="15dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:src="@drawable/friendadd" />
