--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v4.widget.DrawerLayout
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawerId"
-    tools:openDrawer="start"
- >
-
-
-
+    tools:openDrawer="start">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -21,7 +17,7 @@
         tools:context=".MainActivity"
         android:orientation="vertical">
 
-        <android.support.design.widget.TabLayout
+        <com.google.android.material.tabs.TabLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#F0EFEB"
@@ -34,35 +30,32 @@
             app:tabPaddingEnd="-1dp"
             app:tabPaddingStart="-1dp"
             app:tabPaddingTop="-1dp"
-            app:tabTextAppearance="@style/MyTabLayoutTextAppearance"
+            app:tabTextAppearance="@style/MyTabLayoutTextAppearance">
 
-            >
-
-        </android.support.design.widget.TabLayout>
+        </com.google.android.material.tabs.TabLayout>
 
 
-        <android.support.v4.view.ViewPager
+
+        <androidx.viewpager.widget.ViewPager
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/viewPagerId"
-            >
+            android:id="@+id/viewPagerId">
 
-        </android.support.v4.view.ViewPager>
+        </androidx.viewpager.widget.ViewPager>
 
     </LinearLayout>
 
 
-    <android.support.design.widget.NavigationView
+
+    <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:id="@+id/NavigationId2"
         android:background="#ffffffff"
         app:menu="@menu/drawermenu"
         android:layout_gravity="start"
-        app:headerLayout="@layout/header"
-        >
+        app:headerLayout="@layout/header">
 
+    </com.google.android.material.navigation.NavigationView>
 
-    </android.support.design.widget.NavigationView>
-
-</android.support.v4.widget.DrawerLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
