--- a/app/src/main/res/layout/activity_pre_order_page.xml
+++ b/app/src/main/res/layout/activity_pre_order_page.xml
@@ -11,8 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/imageView"
