--- a/app/src/main/res/layout/activity_pre_order_time_select.xml
+++ b/app/src/main/res/layout/activity_pre_order_time_select.xml
@@ -9,9 +9,7 @@
     tools:context=".PreOrderTimeSelect">
 
 
-
-
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/userIDTextInputLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
@@ -21,15 +19,15 @@
         android:layout_marginBottom="40dp"
         android:layout_height="wrap_content">
 
-        <android.support.design.widget.TextInputEditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/currentdatepick"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clickable="false"
             android:focusable="false"
             android:hint="Delivery Date" />
-    </android.support.design.widget.TextInputLayout>
-    <android.support.design.widget.TextInputLayout
+    </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputLayout
 
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
@@ -39,14 +37,14 @@
         android:layout_marginBottom="40dp"
         android:layout_height="wrap_content">
 
-        <android.support.design.widget.TextInputEditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/currenttimepick"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clickable="false"
             android:focusable="false"
             android:hint="Delivery Time" />
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
 
 
@@ -56,11 +54,9 @@
         android:layout_height="wrap_content"
         android:text="Place Order"
         android:gravity="center"
-
         android:layout_marginBottom="2dp"
         android:layout_marginTop="5dp"
-        android:background="#EB0707"
-        />
+        android:background="#EB0707" />
 
 
 </LinearLayout>
