--- a/app/src/main/res/layout/activity_search_restaurant.xml
+++ b/app/src/main/res/layout/activity_search_restaurant.xml
@@ -5,7 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
+
+    <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="55dp"
         app:title="Search Food"
@@ -16,7 +17,7 @@
         >
 
 
-    </android.support.v7.widget.Toolbar>
+    </androidx.appcompat.widget.Toolbar>
 
     <TextView
         android:id="@+id/tv_search_result_for"
@@ -33,7 +34,8 @@
         android:layout_height="42dp"
         android:layout_gravity="center"
         android:visibility="invisible" />
-    <android.support.v7.widget.RecyclerView
+
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_search_restaurant"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
