--- a/app/src/main/res/layout/activity_support_page.xml
+++ b/app/src/main/res/layout/activity_support_page.xml
@@ -10,12 +10,10 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Contact Us"
-        />
+        android:text="Contact Us" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="F.A.Q"
-        />
+        android:text="F.A.Q" />
 
 </LinearLayout>
