--- a/app/src/main/res/layout/activity_tab_fragment_nearby.xml
+++ b/app/src/main/res/layout/activity_tab_fragment_nearby.xml
@@ -10,7 +10,8 @@
         android:layout_height="42dp"
         android:layout_gravity="center"
         android:visibility="invisible" />
-    <android.support.v7.widget.RecyclerView
+
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_numbers"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
