--- a/app/src/main/res/layout/activity_tab_fragment_offer.xml
+++ b/app/src/main/res/layout/activity_tab_fragment_offer.xml
@@ -5,15 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TabFragmentOffer"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
     <ProgressBar
         android:id="@+id/pv_restaurant_offer_menu"
         android:layout_width="42dp"
         android:layout_height="42dp"
         android:layout_gravity="center"
         android:visibility="invisible" />
-    <android.support.v7.widget.RecyclerView
+
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_restaurants_offer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
