--- a/app/src/main/res/layout/activity_tab_fragment_popular.xml
+++ b/app/src/main/res/layout/activity_tab_fragment_popular.xml
@@ -9,7 +9,8 @@
         android:layout_height="42dp"
         android:layout_gravity="center"
         android:visibility="invisible" />
-    <android.support.v7.widget.RecyclerView
+
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_list_of_popular_restaurant"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
