--- a/app/src/main/res/layout/activity_tab_fragment_recommended.xml
+++ b/app/src/main/res/layout/activity_tab_fragment_recommended.xml
@@ -31,8 +31,7 @@
         android:padding="8dp"
         android:rowCount="2">
 
-
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_rowWeight="1"
@@ -70,9 +69,9 @@
 
 
             </LinearLayout>
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_rowWeight="1"
@@ -110,9 +109,9 @@
 
 
             </LinearLayout>
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_rowWeight="1"
@@ -150,9 +149,9 @@
 
 
             </LinearLayout>
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_rowWeight="1"
@@ -190,7 +189,7 @@
 
 
             </LinearLayout>
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
     </GridLayout>
 
 
@@ -204,10 +203,7 @@
             android:layout_height="wrap_content"
             android:text="Recommended for you"
             android:layout_margin="10dp"
-
-            android:textSize="14sp"
-
-            />
+            android:textSize="14sp" />
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
