--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -75,8 +76,7 @@
     android:layout_height="wrap_content"
     android:layout_alignParentRight="true"
     android:layout_centerInParent="true"
-    android:src="@drawable/ic_edit_black_24dp"
-    />
+    android:src="@drawable/ic_edit_black_24dp" />
 
 
         </RelativeLayout>
@@ -200,4 +200,4 @@
 
     </LinearLayout>
 
-</android.support.v4.widget.NestedScrollView>
+</androidx.core.widget.NestedScrollView>
