--- a/app/src/main/res/layout/itemlayout.xml
+++ b/app/src/main/res/layout/itemlayout.xml
@@ -5,15 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <android.support.v7.widget.CardView
+
+    <androidx.cardview.widget.CardView
         android:id="@+id/card_myevent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         card_view:cardElevation="5dp"
         card_view:cardUseCompatPadding="true"
         android:clickable="true"
-        android:foreground="?attr/selectableItemBackground"
-        >
+        android:foreground="?attr/selectableItemBackground">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -92,5 +92,5 @@
             </LinearLayout>
 
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
