cart icon badge done

--- a/app/src/main/res/layout/activity_restaurant_menu_page.xml
+++ b/app/src/main/res/layout/activity_restaurant_menu_page.xml
@@ -22,7 +22,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardElevation="4dp"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    >
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
