--- a/app/src/main/res/layout/activity_food_cart_single_item_page.xml
+++ b/app/src/main/res/layout/activity_food_cart_single_item_page.xml
@@ -27,6 +27,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/iv_order_item_delete"
             android:layout_width="40dp"
             android:layout_height="20dp"
             android:src="@drawable/deleteicon2"
