--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ProfileEdit"
-    tools:showIn="@layout/test_layout">
+    tools:showIn="@layout/activity_profile_edit">
 
     <LinearLayout
         android:layout_width="match_parent"
