--- a/app/src/main/res/layout/activity_order_submit_complete.xml
+++ b/app/src/main/res/layout/activity_order_submit_complete.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".OrderSubmitComplete">
+    tools:context=".OrderSubmitComplete"
+    android:id="@+id/show_snacbar_order_confirm">
 
 <LinearLayout
     android:layout_width="match_parent"
@@ -63,6 +64,7 @@
         android:layout_height="wrap_content" />
 
     <TextView
+        android:id="@+id/tv_driver_found"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Driver Found"
@@ -129,4 +131,6 @@
 
 
     </RelativeLayout>
+
+
 </LinearLayout>
