--- a/app/src/main/res/layout/activity_group_friend_add.xml
+++ b/app/src/main/res/layout/activity_group_friend_add.xml
@@ -30,7 +30,7 @@
             android:id="@+id/userPhoneNoTextOfFriendInputEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
+            android:inputType="phone"
             android:hint="Phone Number" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -42,7 +42,7 @@
         android:id="@+id/sb_user_name_error"
         android:orientation="horizontal">
         <Button
-            android:id="@+id/cancelButton"
+            android:id="@+id/bt_add_friend_cancelButton"
             android:layout_width="200dp"
             android:padding="5dp"
             android:layout_margin="5dp"
@@ -52,7 +52,7 @@
             android:textColor="@android:color/white"
             android:layout_height="wrap_content" />
         <Button
-            android:id="@+id/emailUpdateButton"
+            android:id="@+id/bt_add_friend"
             android:layout_width="200dp"
             android:padding="5dp"
             android:layout_margin="5dp"
@@ -62,11 +62,6 @@
             android:textColor="@android:color/white"
             android:layout_height="wrap_content" />
     </LinearLayout>
-    <ProgressBar
-        android:id="@+id/pv_edit_profile_name"
-        android:layout_width="42dp"
-        android:layout_height="42dp"
-        android:layout_gravity="center"
-        android:visibility="invisible" />
+
 
 </LinearLayout>
