--- a/app/src/main/res/layout/activity_profile_edit.xml
+++ b/app/src/main/res/layout/activity_profile_edit.xml
@@ -57,13 +57,14 @@
 
 
                     <com.google.android.material.floatingactionbutton.FloatingActionButton
+                        android:id="@+id/floatingActionButton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
                         android:layout_alignEnd="@+id/imageview_account_profile"
-                        android:layout_marginTop="10dp"
-                        android:src="@drawable/cameraicon"
-                        android:id="@+id/floatingActionButton" />
+                        android:layout_alignParentTop="true"
+                        android:layout_marginTop="96dp"
+                        android:layout_marginEnd="-22dp"
+                        android:src="@drawable/cameraicon" />
 
                 </RelativeLayout>
 
@@ -91,11 +92,7 @@
                     android:layout_marginTop="20dp"
                     android:background="@color/profileBackground">
 
-                    <View
-                        android:layout_alignParentTop="true"
-                        android:layout_width="match_parent"
-                        android:layout_height="30dp"
-                        android:background="@drawable/profile_bk"/>
+
 
 
                 </RelativeLayout>
