--- a/app/src/main/res/layout/activity_friend_history_details.xml
+++ b/app/src/main/res/layout/activity_friend_history_details.xml
@@ -7,6 +7,68 @@
     android:orientation="vertical"
     android:layout_margin="20dp"
     tools:context=".FriendHistoryDetails">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        android:layout_marginBottom="20dp"
+        >
+
+        <ImageView
+            android:id="@+id/list_icon"
+            android:layout_width="80dp"
+            android:layout_height="90dp"
+            android:src="@drawable/dummyicon"
+            />
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_toRightOf="@+id/list_icon"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true">
+
+            <TextView
+                android:id="@+id/tv_friend_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:textSize="14sp"
+                android:paddingRight="16dp"
+                android:text="Nurul Momen" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:textSize="14sp"
+                    android:paddingRight="6dp"
+                    android:text="Phone Number :" />
+
+                <TextView
+                    android:id="@+id/tv_friend_phone"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:paddingRight="6dp"
+                    android:text="+8801844462225" />
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+
+    </RelativeLayout>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -16,7 +78,7 @@
         android:layout_height="wrap_content">
 
     <TableLayout
-        android:id="@+id/table_of_item"
+        android:id="@+id/table_of_order_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:stretchColumns="0,1,2"
@@ -64,7 +126,7 @@
 
         </TableRow>
 
-        <TableRow
+       <!-- <TableRow
             android:layout_width="wrap_content"
             android:layout_height="1dp"
             android:layout_margin="1dp">
@@ -103,17 +165,20 @@
                 />
 
 
-        </TableRow>
+        </TableRow>-->
 
 
     </TableLayout>
 
     </LinearLayout>
     </ScrollView>
+
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
+
     <Button
+        android:id="@+id/bt_remove_friend"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Remove Friend"
