--- a/app/src/main/res/layout/activity_tab_fragment_recommended.xml
+++ b/app/src/main/res/layout/activity_tab_fragment_recommended.xml
@@ -8,12 +8,6 @@
     tools:context=".TabFragmentRecommended"
     android:id="@+id/tab_offer_container">
 
-    <ProgressBar
-        android:id="@+id/pv_offerr"
-        android:layout_width="42dp"
-        android:layout_height="42dp"
-        android:layout_gravity="center"
-        android:visibility="invisible"/>
 
 
     <com.smarteist.autoimageslider.SliderLayout
@@ -230,64 +224,34 @@
 
 
     </LinearLayout>
-    <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-        <LinearLayout
+   <!-- <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">-->
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_numbers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:scrollbars="vertical|horizontal"/>
+
+
+
+    <!--    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="160dp"
             android:layout_margin="5dp"
             android:orientation="horizontal">
- <!--       <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
 
-                <ImageView
-                    android:layout_width="200dp"
-                    android:layout_height="150dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginRight="10dp"
-                    android:src="@drawable/burgericon"
-                    />
-            </LinearLayout>
-            <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
 
-                <ImageView
-                    android:layout_width="200dp"
-                    android:layout_height="150dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginRight="10dp"
-                    android:src="@drawable/burgericon"
-                    />
-            </FrameLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
 
-                <ImageView
-                    android:layout_width="200dp"
-                    android:layout_height="150dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginRight="10dp"
-                    android:src="@drawable/burgericon"
-                    />
-            </LinearLayout>
-        </LinearLayout>-->
-        <FrameLayout
+           <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:orientation="vertical">
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -376,9 +340,9 @@
 
 
             </LinearLayout>
-        </FrameLayout>
+        </FrameLayout>-->
 
-            <FrameLayout
+           <!-- <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
@@ -659,9 +623,9 @@
 
 
                 </LinearLayout>
-            </FrameLayout>
-        </LinearLayout>
-    </HorizontalScrollView>
+            </FrameLayout>-->
+        <!--</LinearLayout>-->
+   <!-- </HorizontalScrollView>-->
 
 
 
