--- a/app/src/main/res/layout/group_list_design.xml
+++ b/app/src/main/res/layout/group_list_design.xml
@@ -45,6 +45,7 @@
 
                 <TextView
 
+
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
@@ -54,6 +55,7 @@
                     android:text="Total Earn:" />
 
                 <TextView
+                    android:id="@+id/tv_total_earn_point"
 
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
