--- a/app/src/main/res/layout/tab_fragment_recommanded_restaurant_list.xml
+++ b/app/src/main/res/layout/tab_fragment_recommanded_restaurant_list.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginLeft="10dp"
     android:layout_marginTop="10dp"
     android:layout_marginRight="10dp"
     app:cardCornerRadius="4dp"
     android:padding="4dp"
-    app:cardElevation="20dp"
-    android:minHeight="200dp">
+    app:cardElevation="20dp">
     <FrameLayout
 
         android:layout_width="match_parent"
@@ -19,14 +18,14 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="160dp"
             android:orientation="vertical">
 
 
             <LinearLayout
                 android:background="@drawable/burgerbackground"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_width="280dp"
+                android:layout_height="100dp"
                 android:orientation="vertical"
                 android:layout_weight="1">
 
@@ -54,7 +53,7 @@
                         android:id="@+id/tv_cusine"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Cuisine" />
+                        android:text="Operation Time" />
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -66,7 +65,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Operation" />
+                         />
 
                     <TextView
                         android:id="@+id/tv_opening_closing"
