--- a/app/src/main/res/layout/notification_fragment.xml
+++ b/app/src/main/res/layout/notification_fragment.xml
@@ -4,9 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/backgroundfragment"
+    android:background="#ffff"
     android:orientation="vertical"
     >
+
 <!--
 
     <com.smarteist.autoimageslider.SliderLayout
